--- a/.env
+++ b/.env
@@ -6,3 +6,9 @@ MAIL_USER = "noreply.75way@gmail.com"
 MAIL_PASS = "jhfjlpulomqilglt"
 APP_URL = "http://localhost:3000"
 ADMIN_EMAIL = "noreply.75way@gmail.com"
+
+VITE_APP_CLOUD_NAME=ddxpchjay
+VITE_APP_CLOUDINARY_API_KEY=957539457285927
+VITE_APP_CLOUDINARY_API_SECRET=jvjhjIR838M6QX7OVW7FyWZyS00
+VITE_APP_CLOUDINARY_UPLOAD_PRESET=dulyjtr3
+VITE_APP_CLOUDINARY_URL=https://api.cloudinary.com/v1_1/ddxpchjay/image/upload
