--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
+    "@types/express-fileupload": "^1.5.0",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
     "@types/nodemailer": "^6.4.8",
@@ -49,10 +50,12 @@
     "accesscontrol": "^2.2.1",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "cloudinary": "^2.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-fileupload": "^1.5.0",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.0",
