.env file updated

--- a/.env
+++ b/.env
@@ -7,8 +7,8 @@ MAIL_PASS = "jhfjlpulomqilglt"
 APP_URL = "http://localhost:3000"
 ADMIN_EMAIL = "noreply.75way@gmail.com"
 
-VITE_APP_CLOUD_NAME=ddxpchjay
-VITE_APP_CLOUDINARY_API_KEY=957539457285927
-VITE_APP_CLOUDINARY_API_SECRET=jvjhjIR838M6QX7OVW7FyWZyS00
-VITE_APP_CLOUDINARY_UPLOAD_PRESET=dulyjtr3
-VITE_APP_CLOUDINARY_URL=https://api.cloudinary.com/v1_1/ddxpchjay/image/upload
+CLOUD_NAME=ddxpchjay
+CLOUDINARY_API_KEY=957539457285927
+CLOUDINARY_API_SECRET=jvjhjIR838M6QX7OVW7FyWZyS00
+CLOUDINARY_UPLOAD_PRESET=dulyjtr3
+CLOUDINARY_URL=https://api.cloudinary.com/v1_1/ddxpchjay/image/upload
