--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "fleet_management_ctrack_api",
-  "packageManager": "yarn@3.3.1",
   "private": true,
   "scripts": {
     "dev": "NODE_ENV=development nodemon index.ts",
-    "start": "NODE_ENV=dev HOST=0.0.0.0 ts-node ./index.ts",
-    "start:prod": "yarn run build && node ./dist/index.js",
-    "build": "yarn tsc",
+    "start": "NODE_ENV=development HOST=0.0.0.0 ts-node ./index.ts",
+    "start:prod": "NODE_ENV=production npm tsc && node ./dist/index.js",
+    "build": "npm tsc",
     "lint": "eslint . --ext .ts,.js --max-warnings=0",
     "lint:fix": "eslint --fix",
     "format": "prettier . -w",
@@ -28,6 +27,7 @@
     "@types/express": "^4.17.17",
     "@types/express-fileupload": "^1.5.0",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/mongoose-delete": "^1.0.4",
     "@types/morgan": "^1.9.4",
     "@types/nodemailer": "^6.4.8",
     "@types/passport": "^1.0.12",
@@ -59,6 +59,7 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.0",
+    "mongoose-delete": "^1.0.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1",
