--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ MAIL_USER = "noreply.75way@gmail.com"
 MAIL_PASS = "jhfjlpulomqilglt"
 APP_URL = "http://localhost:3000"
 ADMIN_EMAIL = "noreply.75way@gmail.com"
-
+REACT_APP_BACKEND_API="http://192.168.1.31:5000"
 CLOUD_NAME=dvcqj0hf7
 CLOUDINARY_API_KEY=941766515761762
 CLOUDINARY_API_SECRET=vPG_3aULPJwvotytfC4TK-B8jy4
