--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,8 @@
-PORT = 4000
+PORT = 5000
 NODE_ENV = "development"
 JWT_SECRET = "$*&^%@$%!(*)"
-MONGODB_URI = "mongodb+srv://user:75way@75way.kz17p3r.mongodb.net/fms?retryWrites=true&w=majority&appName=75way"
+# MONGODB_URI = "mongodb+srv://user:75way@75way.kz17p3r.mongodb.net/fms?retryWrites=true&w=majority&appName=75way"
+MONGODB_URI ='mongodb+srv://75way:BKsWnxI8tunxQ0iD@fleet.fjrywug.mongodb.net/fleet'
 MAIL_USER = "noreply.75way@gmail.com"
 MAIL_PASS = "jhfjlpulomqilglt"
 APP_URL = "http://localhost:3000"
