--- a/.env.development
+++ b/.env.development
@@ -7,3 +7,9 @@ MAIL_USER = "noreply.75way@gmail.com"
 MAIL_PASS = "jhfjlpulomqilglt"
 APP_URL = "http://localhost:3000"
 ADMIN_EMAIL = "noreply.75way@gmail.com"
+
+CLOUD_NAME=ddxpchjay
+CLOUDINARY_API_KEY=957539457285927
+CLOUDINARY_API_SECRET=jvjhjIR838M6QX7OVW7FyWZyS00
+CLOUDINARY_UPLOAD_PRESET=dulyjtr3
+
