--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "NODE_ENV=development nodemon index.ts",
     "start": "NODE_ENV=development HOST=0.0.0.0 ts-node ./index.ts",
-    "start:prod": "NODE_ENV=production && node ./dist/index.js",
+    "start:prod": "NODE_ENV=production node ./dist/index.js",
     "build": "npm tsc",
     "lint": "eslint . --ext .ts,.js --max-warnings=0",
     "lint:fix": "eslint --fix",
