--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cloudinary": "^2.0.3",
+    "complete-teltonika-parser": "^0.3.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
