removed temp file

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 !.yarn/versions
 /node_modules
 
+
 # Swap the comments on the following lines if you don't wish to use zero-installs
 # Documentation here: https://yarnpkg.com/features/zero-installs
 # !.yarn/cache
@@ -13,3 +14,4 @@
 dist
 .DS_Store
 .DS_Store*
+tmp
