--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "express-fileupload": "^1.5.0",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
+    "moment": "^2.30.1",
     "mongoose": "^7.4.0",
     "mongoose-delete": "^1.0.2",
     "morgan": "^1.10.0",
