--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mongoose-delete": "^1.0.4",
     "@types/morgan": "^1.9.4",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.8",
     "@types/passport": "^1.0.12",
     "@types/passport-jwt": "^3.0.9",
@@ -48,6 +49,7 @@
   },
   "dependencies": {
     "accesscontrol": "^2.2.1",
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cloudinary": "^2.0.3",
@@ -63,6 +65,7 @@
     "mongoose": "^7.4.0",
     "mongoose-delete": "^1.0.2",
     "morgan": "^1.10.0",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
