--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
     "@types/express-fileupload": "^1.5.0",
+    "@types/http-errors": "^2.0.4",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mongoose-delete": "^1.0.4",
     "@types/morgan": "^1.9.4",
@@ -60,6 +62,7 @@
     "express-async-handler": "^1.2.0",
     "express-fileupload": "^1.5.0",
     "express-validator": "^7.0.1",
+    "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.1",
     "moment": "^2.30.1",
     "mongoose": "^7.4.0",
